--- a/assets/styles/scss/_media.scss
+++ b/assets/styles/scss/_media.scss
@@ -8,6 +8,15 @@
         width: 100%;
     }
 }
+    .costs {
+        .description-card {
+            min-width: 120px !important;
+        }
+    }
+
+    .information {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
@@ -34,19 +43,48 @@
     // End header
 
     
-.description {
-    &-info {
-        width: 100%;
+    .description {
+        &-info {
+            width: 100%;
+        }
+        .tab_card {
+            margin-top: 75px;
+        }
     }
-    .tab_card {
-        margin-top: 75px;
+    .costs {
+        .tab_card {
+            margin-bottom: 70px !important;
+        }
     }
-}
+    .gallery {
+        &-imgs {
+            margin: 90px auto;
+            max-width: 1350px;
+        }
+        &-left {
+            width: 48.5%;
+        }
+        &-middle {
+            width: 48.5%;
+        }
+    }
+    // End gallery
+    
+
+    .tab_hidden {
+        display: none;
+    }
+    .mobile_show {
+        display: flex;;
+    }
 }
 
 @media (max-width: 576px) {
     .container {
         padding: 0 20px;
+    }
+    .title__text {
+        font-size: 22px;
     }
     .header {
         .menu-bg {
@@ -81,10 +119,63 @@
             font-size: 8px !important;
         }
     }
-    
+    // calendar
+    .gallery {
+        &-imgs {
+            padding: 0 10px;
+            margin-bottom: 10px;
+        }
+        &-left {
+            width: 48.5%;
+        }
+        &-middle {
+            width: 48.5%;
+            height: 400px;
+        }
+        &-right-sub {
+            flex-direction: column;
+            &_l, &_r {
+                width: 100%;
+                height: 195px;
+            }
+            &_r {
+                margin-top: 10px;
+            }
+        }
+        &-mob {
+            padding: 0 10px;
+        }
+        &-mob-sub {
+            height: 260px;
+        }
+    }
+    // End gallery
+    .mob_hidden {
+        display: none;
+    }
+    .form {
+        margin-top: 100px;
+        &-photo {
+            width: 100%;
+            height: 340px;
+            border-radius: 0!important;
+        }
+    }
+
+    .footer {
+        
+    &-list {
+            font-size: 12px;
+        &__link {
+            font-size: 12px;
+        }
+    }&__email {
+        font-size: 12px;
+    }
+    }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 360px) {
     .header {
         &-item {
             &__sub {
@@ -104,4 +195,9 @@
         }
     }
     // End header
+    .calendar {
+        .fc-title {
+            font-size: 6px !important;
+        }
+    }
 }
