--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -46,6 +46,12 @@ ul {
     margin: 0 auto;
 }
 
+.title__text {
+    font-size: 24px;
+    font-weight: 700;
+    color: $blue;
+}
+
 .header {
     height: 670px;
     background-image: url('../../img/png/bg-img.png');
@@ -197,7 +203,7 @@ ul {
         }
     }
     &-card {
-        width: 160px;
+        width: 180px;
         height: 100px;
         border-radius: 10px;
         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -212,20 +218,28 @@ ul {
             left: -17px;
         }
         .filter {
+            display: none;
+            width: 100%;
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(20px);
             display: flex;
-
-            .price__text {
-                font-size: 24px;
-                font-weight: 700;
-                color: $blue;
-            }
+            border-radius: 10px;
+        }
+        &-title {
+            position: relative;
         }
         &__text {
             font-size: 14px;
             font-weight: 500;
             color: $black;
+            position: relative;
+            z-index: 20;
+        }
+        
+        .price__text {
+            font-size: 24px;
+            font-weight: 700;
+            color: $blue;
         }
     }
 }
@@ -236,11 +250,18 @@ ul {
     &-photo {
         width: 60%;
         height: 100%;
+        overflow: hidden;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
 
         &__png {
             object-fit: cover;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 20px;
+            transition: .5s ease;
+            &:hover {
+                transform: scale(1.2);
+            }
         }
     }
     &__title {
@@ -303,10 +324,6 @@ ul {
         font-size: 10px;
         font-weight: 500;
         word-wrap: break-word;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        flex-wrap: wrap;
     }
     .fc-scroller {
         height: auto !important;
@@ -364,5 +381,201 @@ ul {
         height: 40px !important;
     }
 }
+// End calendar
+
+.costs {
+    margin: 100px 0;
+
+    .title__text {
+        margin-bottom: 100px;
+    }
+    .description-card {
+        min-width: 180px;
+        text-align: center;
+    }
+    .description-card__text {
+        font-size: 13.5px;
+        font-weight: 700;
+        
+    }
+}
+// End costs
+
+.information {
+    margin-bottom: 150px;
+    .title__text {
+        margin: 50px 0 90px 0;
+    }
+    &__title {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    &-item {
+        margin-top: 40px;
+    }
+    &-item-pass {
+        margin-right: 25px;
+        .circle {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: $yellow;
+            position: absolute;
+            z-index: -1;
+            top: -15px;
+            left: -15px;
+        }
+    }
+    &-item__text {
+        font-size: 18px;
+        font-weight: 700;
+        color: $blue;
+    }
+    &-item__text-info {
+        font-size: 14px;
+        font-weight: 500;
+        color: $black;
+        margin-top: 20px;
+    }
+    .important {
+        width: 100%;
+        height: 130px;
+        background-color: $gray;
+        padding: 40px 25px;
+        border-radius: 10px;
+        &__text {
+            font-size: 14px;
+            font-weight: 500;
+            width: 90%;
+        }
+    }
+}
+// End information
+
+.gallery {
+    &-imgs {
+        margin: 90px auto;
+        max-width: 1350px;
+    }
+    .openAll {
+        background: transparent;
+        color: $black;
+        &__text {
+            font-weight: 500;
+            font-size: 12px;
+            border-bottom: 2px solid $black;
+        }
+    }
+    &-left {
+        width: 35.5%;
+        overflow: hidden;
+        &-sup {
+            height: 280px;
+        }
+        &-sub {
+            margin-top: 20px;
+            &_l {
+                width: 42.5%;
+                height: 260px;
+            }
+            &_r {
+                width: 52.5%;
+                height: 260px;
+            }
+            &_r2 {
+                width: 100%;
+                height: 120px;
+            }
+        }
+    }
+    &-middle {
+        width: 25%;
+        height: 560px;
+    }
+    &-right-sub_l {
+        width: 52.5%;
+        height: 260px;
+    }
+    &-right-sub_r {
+        width: 42.5%;
+        height: 260px;
+    }
+    &-item {
+        overflow: hidden;
+        border-radius: 5px;
+    }
+    &__img {
+        cursor: pointer;
+        border-radius: 5px;
+        object-fit: cover;
+        transition: .5s;
+
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+}
+// End gallery
+
+.form {
+    position: relative;
+
+    &-photo {
+        width: 50%;
+        height: 640px;
+        border-top-right-radius: 10px;
+        overflow: hidden;
+
+        &__png {
+            border-top-right-radius: 10px;
+            transition: .5s ease;
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+    }
+}
+// End form
+
+.footer {
+    background-color: $gray;
+
+    &-list {
+        margin-bottom: 5px;
+        display: flex;
+        align-items: center;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        &:hover path {
+            fill: $yellow;
+        }
+
+        &__link, span {
+            font-size: 14px;
+            font-weight: 500;
+            color: $black;
+            margin-left: 5px;
+            &:hover {
+                color: $yellow;
+            }
+        }
+    }&__email {
+        font-size: 14px;
+        font-weight: 500;
+        color: $black;
+        cursor: pointer;
+        &:hover {
+            color: $yellow;
+        }
+        &:hover path {
+            fill: $yellow;
+        }
+    }
+}
+.mobile_show {
+    display: none;
+}
+
 
 @import './media'
