--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -25,6 +25,7 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden !important;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -312,6 +313,7 @@ ul {
 }
 
 .calendar {
+  overflow-x: hidden;
   height: 877px;
 }
 
@@ -728,6 +730,48 @@ ul {
   display: none;
 }
 
+.big-photo {
+  height: 100vh;
+  z-index: 999;
+  display: none;
+}
+
+.big-photo-item {
+  width: 90%;
+  height: 90%;
+}
+
+.big-photo__img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-border-radius: 25px;
+          border-radius: 25px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
+}
+
+.big-photo .close__photo {
+  position: absolute;
+  bottom: 20px;
+  right: 25px;
+  padding: 5px 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
+  background-color: tomato;
+  color: #fff;
+}
+
+.big-photo .filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  z-index: -1;
+}
+
 @media (max-width: 992px) {
   .description-info {
     width: 100%;
@@ -744,6 +788,10 @@ ul {
 }
 
 @media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 0;
+    display: none;
+  }
   .container {
     padding: 0 70px;
   }
