--- a/assets/styles/scss/_media.scss
+++ b/assets/styles/scss/_media.scss
@@ -20,6 +20,10 @@
 }
 
 @media (max-width: 768px) {
+    ::-webkit-scrollbar {
+        width: 0;
+        display: none;
+      }
     .container {
         padding: 0 70px;
     }
