--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -7,12 +7,14 @@
     box-sizing: border-box;
 }
 
+
 html {
     scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden !important;
 }
 
 h1,h2,h3,h4,h5,h6,p {
@@ -246,6 +248,7 @@ ul {
 // End description
 
 .calendar {
+    overflow-x: hidden;
     height: 877px;
     &-photo {
         width: 60%;
@@ -575,6 +578,41 @@ ul {
 }
 .mobile_show {
     display: none;
+}
+// End footer
+
+.big-photo {
+    height: 100vh;
+    z-index: 999;
+    display: none;
+
+    &-item {
+        width: 90%;
+        height: 90%;
+    }
+    &__img {
+        object-fit: contain;
+        border-radius: 25px;
+        border-radius: 10px;
+    }
+    .close__photo {
+        position: absolute;
+        bottom: 20px;
+        right: 25px;
+        padding: 5px 10px;
+        border-radius: 10px;
+        background-color: tomato;
+        color: #fff;
+    }
+    .filter {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        backdrop-filter: blur(20px);
+        z-index: -1;
+    }
 }
 
 
