--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -835,6 +835,10 @@ ul {
     display: -ms-flexbox;
     display: flex;
   }
+  .big-photo-item {
+    width: 100%;
+    height: 95%;
+  }
 }
 
 @media (max-width: 576px) {
