--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -1,5 +1,11 @@
 @font-face {
     font-family: 'Montserrat';
+    src: url('../../font/Montserrat/Montserrat-Thin.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 100;
+}
+@font-face {
+    font-family: 'Montserrat';
     src: url('../../font/Montserrat/Montserrat-Medium.ttf') format('truetype');
     font-style: normal;
     font-weight: 500;
